--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 MONGO = mongodb+srv://lucky:lucky11@cluster0.i3bhh.mongodb.net/?retryWrites=true&w=majority
 
-JWT = luckystar11
+JWT = luckystar11sadfasfsfafsaf
