--- a/api/.env
+++ b/api/.env
@@ -1,3 +1,3 @@
-MONGO = mongodb+srv://lucky:lucky11@cluster0.i3bhh.mongodb.net/?retryWrites=true&w=majority
+MONGO = mongodb+srv://lucky:lucky@cluster0.lf1uzh6.mongodb.net/?retryWrites=true&w=majority
 
 JWT = luckystar11sadfasfsfafsaf
